fix: Showing intro on mobile devices

--- a/assets/scss/base/main.scss
+++ b/assets/scss/base/main.scss
@@ -80,21 +80,20 @@ img{
 
 
 .intro {
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: #14191b;
-    transition: 0.7s;
-    z-index: 101;
-    font-size: 27px;
+    display: none;
     @include laptop{
-        font-size: 47px;
+        display: flex;
+        align-content: center;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: #14191b;
+        transition: 0.7s;
+        z-index: 101;
     }
 }
 
